# beacon-python-devops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
beacon/: __init__.py  cli.py  cloud.py  config.py  metrics.py  observability.py  probe.py  report.py  secret.py  secrets.py  serverless.py
config/: targets.yaml
deploy/: README.md  inventory.ini  playbook.yml
deploy/group_vars/: monitors.yml
docs/: Non confirmé 610153.crdownload
labs/: j0-quiz-positionnement.md  lab1-beacon-config.md  lab10-beacon-observable.md  lab11-beacon-ci.md  lab12-beacon-serverless.md  lab2-beacon-sonde.md  lab3-beacon-cli.md  lab4-beacon-tests.md  lab5-beacon-web.md  lab6-beacon-secrets.md  lab7-beacon-cloud.md  lab8-beacon-deploy.md  lab9-beacon-conteneur.md
serverless/: README.md  template.yaml
tests/: test_cli.py  test_cloud.py  test_config.py  test_metrics.py  test_probe.py  test_secret.py  test_secrets.py
