[project]
name = "beacon"
version = "0.1.0"
description = "Sonde de supervision légère (support de formation Python/DevOps)"
requires-python = ">=3.12"
dependencies = ["pyyaml", "httpx", "boto3", "prometheus-client"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "moto"]

[project.scripts]
beacon = "beacon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["beacon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
