[project]
name = "beacon"
version = "0.1.0"
description = "Sonde de supervision légère (support de formation Python/DevOps)"
requires-python = ">=3.12"
dependencies = ["pyyaml", "httpx", "boto3", "prometheus-client"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "moto", "ruff", "mypy", "types-PyYAML"]

[project.scripts]
beacon = "beacon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["beacon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E/F (pyflakes/pycodestyle), I (isort), UP (pyupgrade), B (bugbear).
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
# Le module Ansible custom n'est pas dans le paquet beacon ; on type beacon/.
files = ["beacon"]

[[tool.mypy.overrides]]
# moto/boto3 n'exposent pas toujours des stubs complets.
module = ["moto.*", "botocore.*"]
ignore_missing_imports = true
